--- a/clipdown/2023/webview/cashmate/view/download_section.html
+++ b/clipdown/2023/webview/cashmate/view/download_section.html
@@ -17,6 +17,7 @@
         .form-control:focus{outline: none; border-color: #333;}
         .empty-2{padding:0 2px;}
         .empty-5{padding:0 5px;}
+        .section_download{padding: 50px 0;} /* 영역 테스트 스타일 */
         .content_download{position: relative; width: 100%;}
         .btn_box{position: relative; margin: 10px 0;}
         .btn_download{background: #e31d19; border: 1px solid #e31d19; color:#fff; font-weight: 500; padding: 8px 20px;}
@@ -38,11 +39,12 @@
         .tooltip_reward .btn_tooltip .text_des{font-size: 13px; padding-right: 5px;}
         .tooltip_reward .btn_tooltip .icon_tooltip{position: relative;}
         .tooltip_reward .btn_tooltip .icon_tooltip svg{position: relative; width: 14px; height: 14px; vertical-align: top;}
-        .tooltip_reward .notice_tooltip{position: absolute; top:100%; left: 0; width: 260px; background: #fff; border: 1px solid #2C2F42;padding: 10px 10px; box-sizing: border-box; box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.15); z-index: 1000;}
-        .tooltip_reward .notice_tooltip .notice_header{position: relative; padding-bottom: 5px;}
-        .tooltip_reward .notice_tooltip .notice_header strong{font-size: 12px;}
-        .tooltip_reward .notice_tooltip .notice_list{padding: 0; margin: 0;}
-        .tooltip_reward .notice_tooltip .notice_list .item_notice{font-size: 11px; padding-bottom: 3px;}
+        .tooltip_reward .tooltip_layer{display: none;}
+        .tooltip_reward .tooltip_layer.notice_tooltip{position: absolute; top:-40px; left: 110px; width: 260px; background: #fff; border: 1px solid #2C2F42;padding: 10px 10px; box-sizing: border-box; box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.15); z-index: 1000;}
+        .tooltip_reward .tooltip_layer.notice_tooltip .notice_header{position: relative; padding-bottom: 5px;}
+        .tooltip_reward .tooltip_layer.notice_tooltip .notice_header strong{font-size: 12px;}
+        .tooltip_reward .tooltip_layer.notice_tooltip .notice_list{padding: 0; margin: 0;}
+        .tooltip_reward .tooltip_layer.notice_tooltip .notice_list .item_notice{font-size: 11px; padding-bottom: 3px;}
 
         .btn_box_top{position: absolute; top: -1px; right: 0; }
         .btn_box_top .btn_popup_close{display: inline-block; vertical-align: middle; background:transparent; width: 14px; height: 14px; border:0; padding:0; cursor: pointer;}
@@ -58,12 +60,11 @@
 
 
     </style>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
     <div class="warp">
         <div class="container">
-            <section class="section_download">
+            <section class="section_download">                
                 <div class="content_download">
                     <div class="btn_box">
                         <!-- 좌측영역 이벤트 버튼 -->
@@ -80,14 +81,14 @@
                                         </svg>
                                     </span>
                                 </div>
-                                <div class="notice_tooltip" aria-hidden="true">
+                                <div class="tooltip_layer notice_tooltip" aria-hidden="true">
                                     <div class="notice_header">
                                         <strong>포인트 적립 안내</strong>
-                                        <div class="btn_box_top">
+                                        <!-- <div class="btn_box_top">
                                             <button type="button" class="btn_popup_close" name="close">
                                                 <span class="btn_close icon-close"></span>
                                             </button>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <ul class="notice_list">
                                         <li class="item_notice">- 동영상 시청 3분마다 포인트가 적립됩니다.</li>
@@ -120,27 +121,49 @@
                         <input type="text" id="tiem" maxlength="4" class="form-control" placeholder="ss" value="">
                         <button class="btn btn_part btn_part_square">확인</button>
                     </div>
-                </div>
-                <!-- <script>
-                    //<button class="btn btn_download btn_part" onclick="option_time()">부분 다운로드</button>
-                    function option_time() {
-                        var op = document.getElementById("optionDownload");
-                        if (op.style.display === "block") {
-                            op.style.display = "none";
-                        } else {
-                            op.style.display = "block";
-                        }
-                    }
-                </script> -->
-                <script>
-                    $(function() {
-                        $(".btn_part").on("click", function() {
-                            $("#optionDownload").slideToggle("fast");
-                        });
-                    });
-                </script>
+                </div>                
             </section>
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script>
+    $(function() {
+        $(".btn_part").on("click", function() {
+            $("#optionDownload").slideToggle("fast");
+        });
+    });
+</script>
+<script>
+    $(document).ready(function(){
+	openTooltip('.btn_tooltip', '.tooltip_layer');
+    });
+
+    function openTooltip(selector, layer) {
+                
+        var $layer = $(layer);
+
+        // 툴팁버튼 처리
+        $(selector).on('click', function() {
+            $layer.toggleClass('on');
+        });
+        
+        function overTooltip() {
+            
+            var $this = $(selector);
+            
+            // 마우스 오버시 툴팁 레이어 노출
+            $this.on('mouseover focusin', function() {
+                $(this).next(layer).show();	
+            })	
+            // 마우스 떠날시 툴팁 레이어 숨김
+            $this.on('mouseleave focusout', function() {
+                if(!$layer.hasClass('on')) {
+                        $(this).next(layer).hide();
+                }
+            })
+        }
+        overTooltip();
+    }
+</script>
 </html>
