--- a/clipdown/2023/webview/reward/resource/css/common.css
+++ b/clipdown/2023/webview/reward/resource/css/common.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
  
  /*!
  * 2023-05-01
@@ -38,7 +38,7 @@ time, mark, audio, video{
 }
 article,aside,details,figcaption,figure, footer,header,hgroup,menu,nav,section {display:block;} /* HTML5 display-role reset for older browsers */
 audio, canvas, progress, video {display: inline-block; vertical-align: baseline;}
-div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family:'Noto Sans KR', 'Poppins', 'Malgun Gothic', Helvetica, sans-serif; font-size:1.4rem; font-size:14px; line-height: 1.4; color:#333;}
+div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family:'Malgun Gothic', 'Poppins', Noto Sans KR, Helvetica, sans-serif; font-size:1.3rem; font-size:13px; line-height: 1.3; color:#20222B;;}
 html, body{width: 100%; height: 100%;}
 html{-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body{overflow-x: hidden; overflow-y: auto; -ms-overflow-style:none; -webkit-font-smoothing: antialiased;}
@@ -57,11 +57,10 @@ textarea,input[type="file"],input[type="password"],input[type="text"]{text-inden
 select{padding:0 0 0 5px; height:28px; border:1px solid #e5e5e5;}
 select{-webkit-appearance: normal; -moz-appearance: normal; appearance: normal; height:28px \0IE8;} /* IE8 전용*/
 select::-ms-expand{ display: none;}
-select:focus, textarea:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="text"]:focus {outline: 1px solid #aaa; outline-offset: -1px;}
+select:focus, textarea:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="text"]:focus {outline: 1px solid #666; outline-offset: -1px;}
 textarea[readonly="readonly"],button[readonly="readonly"],select[readonly="readonly"],input[readonly="readonly"], 
 textarea[disabled="disabled"],button[disabled="disabled"],select[disabled="disabled"],input[disabled="disabled"]{background:#f5f5f5; border-color:#d4d4d4;}
 input[type=text]::-ms-clear {display: none;}
-input[type="password"],input[type="file"],input[type="text"]{}
 input[type="file"]{width:100%;}
 input[type="radio"]{vertical-align:text-bottom;}
 input::placeholder{font-size:11px; font-size:1.1rem; color:#aaa;}
@@ -238,7 +237,7 @@ a.disabled{pointer-events: none;}
 .m-checkbox-inline, .m-radio-inline{display: inline-block;}
 .m-checkbox-inline .m-checkbox, .m-radio-inline .m-radio, .m-checkbox input:checked~span:after, .m-radio>input:checked~span:after{display: inline-block; margin-right: 15px; margin-bottom: 5px;}
 .m-checkbox-inline .m-checkbox:last-child, .m-checkbox-inline .m-radio:last-child{margin-right: 0;}
-.m-checkbox, .m-radio{display: inline-block; position: relative; margin-bottom: 14px; padding-left: 25px; font-size: 13px; font-size: 1.3rem; font-weight: 400; line-height: 1.5; cursor: pointer;}
+.m-checkbox, .m-radio{display: inline-block; position: relative; margin-bottom: 13px; padding-left: 25px; font-size: 13px; font-size: 1.3rem; font-weight: 400; line-height: 1.5; cursor: pointer;}
 .m-checkbox input, .m-radio input{position: absolute; z-index: -1; top:2px; left: 0; width:16px; height:16px; margin: 0; opacity: 0; filter: alpha(opacity = 0);}
 .m-checkbox span, .m-radio span{position: absolute; top: 2px; left: 0; width: 16px; height: 16px; border: 1px solid #c9caca; background: #fff;}
 .m-checkbox-disabled, .m-checkbox input[disabled]~span, .m-checkbox input:checked[disabled]~span, .m-radio-disabled, .m-radio input[disabled]~span, .m-radio input:checked[disabled]~span{opacity: .5; cursor: default; filter: alpha(opacity = 50);}
@@ -257,9 +256,9 @@ a.disabled{pointer-events: none;}
 .radio_lg span:after{top: 4px; left: 4px; width: 8px; height: 8px;}
 
 .btn_box_top{position: absolute; top: -20px; right: 10px; }
-.btn_box_top .btn_popup_close{display: inline-block; vertical-align: middle; background:transparent; width: 14px; height: 14px; padding:0;}
+.btn_box_top .btn_popup_close{display: inline-block; vertical-align: middle; background:transparent; width: 13px; height: 13px; padding:0;}
 .btn_box_top .btn_popup_close:focus{outline:0;}
-.btn_box_top .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 14px; height: 14px; opacity: 1;}
+.btn_box_top .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 13px; height: 13px; opacity: 1;}
 .btn_box_top .btn_popup_close .icon-close:before, .btn_box_top .btn_popup_close .icon-close:after{content: ''; position: absolute; width: 100%; height:1px; top:50%; right:0; background:#fff;}
 .btn_box_top .btn_popup_close .icon-close:before{-webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);}
 .btn_box_top .btn_popup_close .icon-close:after{-webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg)}
