--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
 /* 
-    * 2022-07-05       
-    * 개별 CSS 스타일
-    * 클립다운 PC프로그램 WebView 인플메이트 통합가입 페이지
+    * 2023-05-23 Style Update
+    * 클립다운 PC 리뉴얼과 캐시메이트 신규 서비스 공통 webview 팝업UI 스타일 작업
+    * 기존 클립다운 PLUS+ 팝업UI들도 업데이트 
+
 */
 
 /* 
@@ -12,17 +13,36 @@
 */
 
 body{background: #202020;}
+.font_num{font-family: 'Poppins', Malgun Gothic, sans-serif; font-weight: 500;}
 
+/* 정리필요 스타일 */
+.join_info .btn_primary{display: block; background: #1a73e8; color: #fff; font-weight: 400; border-radius: 5px; padding: 8px 20px;} 
+.join_info .btn_apply{display: block; border-radius: 0; background: #fff; border: 1px solid #e21d19; color: #e21d19;}
+.join_info .btn_apply:hover{background: #e21d19; border: 1px solid #e21d19; color: #fff;}
+.join_info .content_item.item_guide{text-align: center; margin-top: 40px;}
+.join_info .item_guide .guide_info{border-top:  1px solid #ddd; padding: 40px 0 20px 0;}
+.join_info .item_guide .guide_list{font-size: 11px; font-size: 1.1rem;  padding-top: 15px;}
+.join_info .item_guide .guide_info p, .join_info .item_guide .guide_list .list_title, .join_info .item_guide .guide_list .list_item{color: #888;}
+
+
+
+
+/* 
+    * Custom Style 
+    
+*/
 .wrap {position: relative; width: 100%;}
 .wrap_popup{position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%); width: 100%;}
 .wrap_popup .inner {position: relative; max-width: 398px; width: 100%; height: 100%; margin: 0 auto;}
 .wrap_popup .webview_box{background: #fff; padding : 25px 25px;}
 .webview_box {height: 100%; text-align: center;}
+@media screen and (min-width : 601px) { 
+    .webview_box{border: 1px solid #f7f7f7; border-radius: 0 0 10px 10px;}
+}
 .webview_box .content_box{padding-bottom: 10px;}
 .webview_box .content_box:last-child{padding-bottom: 0;}
 .webview_box .content_box .content_heading{font-size: 15px; font-size: 1.5rem; line-height: 1.5;}
 .webview_box .content_box .content_item{margin: 20px 0 0;}
-
 
 .join_info .profile_img{display: flex; align-items: center; justify-content: center;}
 .join_info .profile_img img{height: 40px;}
@@ -34,16 +54,78 @@ body{background: #202020;}
 .join_info .btn_join{display: block; background: #eb524e; border: 1px solid #eb524e; color: #fff; font-weight: 400; border-radius: 0; padding: 8px 20px;}
 .join_info .btn_join:hover{background: #e21d19; border: 1px solid #e21d19;}
 
+.form_join{border-top: 1px solid #eee; border-bottom: 1px solid #eee; text-align: left;}
+.form_join .agree_all{border-bottom: 1px solid #eee;}
+.form_join .help-text{font-size: 11px; font-size: 1.1rem; color: #888;}
+.form_join .terms_link{position: relative; top:-2px; float: right; line-height: 1; margin: 3px 0; }
+.form_join .form_list{border-bottom: 1px solid #f7f7f7;}
+.form_join .form_list .form_group{margin: 0; padding: 5px 0 0;}
+
+.help_block{display: block; margin: 5px 0;}
+.help_text{font-size: 11px; font-size: 1.1rem; color:#757575;}
+
+/* Button Style */
+.webview_box .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
+.webview_box .btn_default{background: #fff; border: 1px solid #333; color: #333;}
+.webview_box .btn_default:hover{background: #333; border: 1px solid #333; color: #fff;}
+.webview_box .btn_point{background: #e21d19; border: 1px solid #e21d19; color: #fff;}
+.webview_box .btn_point:hover{background: #d22619; border: 1px solid #d22619; color: #fff;}
+.webview_box .btn_outline_point{background: #fff; border: 1px solid #e21d19; color: #e21d19;}
+.webview_box .btn_outline_point:hover{background: #e21d19; border: 1px solid #e21d19; color: #fff;}
+.webview_box .btn_full_gray{background: #a7a7a7; border: 1px solid #a7a7a7; color: #fff;}
+.webview_box .btn_block{display: block; width: 100%;}
+.webview_box .btn_md{font-size: 13px; font-size: 1.3rem; line-height: 1.3; padding: 6px 20px;}
+.webview_box .btn_lg{font-size: 15px; font-size: 1.5rem; padding: 8px 20px;}
+.webview_box .btn_action{text-align: center; margin: 0; border-top: 1px solid #ddd; padding: 20px 0; margin-top: 20px;}
+.webview_box .btn_action .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
+.webview_box .btn_area{margin: 20px 0 10px;}
+.webview_box .guide_text{font-size: 11px; font-size: 1.1rem; color: #666; padding-top: 5px;}
+.webview_box .guide_text .text_link{color: #333; font-size: 11px; font-size: 1.1rem; font-weight: 600; cursor: pointer; text-decoration: underline;}
+.webview_box .error_text{color:#e21d19;}
+
+.btn_checkbox_agree{}
+.btn_checkbox_agree input[type="checkbox"]{display: none;}
+.btn_checkbox_agree input[type="checkbox"] + label{cursor: pointer;}
+.btn_checkbox_agree .bnt_checkbox{display: block; background: #e21d19; border: 1px solid #e21d19; color: #fff; font-size: 15px; font-size: 1.5rem; font-weight: 600; border-radius: 30px; padding: 8px 20px; margin: 0;}
+.btn_checkbox_agree .bnt_checkbox:hover{background: #d22619; border: 1px solid #d22619;}
+
+/* webview 팝업 로그인 안내 스타일 */
+.login_info input::placeholder{font-size:12px; font-size:1.2rem; font-weight: 400; color:#aaa;}
+.login_info .join_link{border-top: 1px solid #eee; padding: 10px 0 0px;}
+.login_info .content_box .content_item.form_auth{margin:10px 0;}
+.login_info .content_box .content_item.form_auth .btn_area{margin: 15px 0 10px;}
+.login_info .guide_text{font-size:10px; font-size:1rem; letter-spacing: -1px;}
+.login_info .guide_text .text_link{font-size:10px; font-size:1rem;}
+
+/* webview 팝업 회원가입 안내 스타일 */
+.join_info{min-height: 320px;}
+.join_info .form_join{border: 0;}
+.join_info .form_join .terms_agree_list{margin: 30px 0;}
+.join_info .form_join .list_scroll{height: 100px; overflow-y: scroll; border: 1px solid #eee;}
+.join_info .form_join .list_scroll li{padding: 2px 10px;}
+.join_info .form_auth .form_group{margin-bottom: 10px;}
+.join_info .form_auth .text_link{font-size:11px; font-size:1.1rem; color: #1a73e8;}
+
+.btn_wv_info{font-family: 'Roboto', sans-serif; color:#757575; font-size: 14px; font-size: 1.4rem; font-weight: 500; text-align: center;}
+.btn_login_google{font-family: 'Roboto', sans-serif; width: 100%; background: #fff url("../images/icon_login_google.png") no-repeat 2rem 50%; background-size: 18px auto; padding: 10px 10px 10px 40px; border-top: 1px solid #f7f7f7; border-radius: 30px; -webkit-box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%); box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%);}
+.btn_login_google:hover{background-color: #eee;}
+
+
+.guide_noti_box{background: #f7f7f7; padding: 10px 10px; margin-bottom: 10px;}
+.guide_noti_box .noti_text{}
+
+
+
+
+/* 
+    * Common UI Style 
+
+*/
 .agree_all label{font-size: 16px; font-size: 1.6rem; font-weight: 600; line-height: 1.7; margin: 10px 0;}
 .agree_all .checkbox span{top:6px;}
 .terms_agree_list{padding: 10px 0;}
 .terms_agree_list li.agree_item{position: relative; padding: 3px 0;}
 .terms_agree_list .checkbox{font-size: 13px; font-size: 1.3rem; line-height: initial; font-weight: 400; color: #20222B;}
-
-.form_join{border-top: 1px solid #eee; border-bottom: 1px solid #eee; text-align: left;}
-.form_join .agree_all{border-bottom: 1px solid #eee;}
-.form_join .help-text{font-size: 11px; font-size: 1.1rem; color: #888;}
-.form_join .terms_link{position: relative; top:-2px; float: right; line-height: 1; margin: 3px 0; }
 
 /* checkbox style */
 .checkbox, .radio{display: inline-block; position: relative; padding-left: 20px; font-size: 13px; font-size: 1.3rem; font-weight: 400; line-height: 1.5; cursor: pointer;}
@@ -53,16 +135,13 @@ body{background: #202020;}
 .checkbox span:after, .radio span:after{content: ''; display: block; position: absolute; }
 .checkbox span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #eee; border-width: 0 2px 2px 0; transform: rotate(45deg);}
 .checkbox input:checked~span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #e21d19; border-width: 0 2px 2px 0; transform: rotate(45deg);}
-@media screen and (min-width : 601px) { 
-    .webview_box{border: 1px solid #f7f7f7; border-radius: 0 0 10px 10px;}
-}
 
+.m-radio>input span{border: 1px solid #bdbdc0; background: #fff;}
+.m-radio span:after{background: #bdbdc0 !important;}
+.m-radio>input:checked~span{border: 1px solid #e21d19; background: #fff;}
+.m-radio>input:checked~span:after{background: #e21d19 !important;}
 
-/* 
-    * 2022-11-22 update  
-    * 인플메이트 휴대폰인증 회원가입 스타일 추가
-*/
-
+/* form style */
 .form_group{text-align: left; margin-bottom: 20px;}
 .form_group .help-block{display: block; margin: 5px 0;}
 .form_group .help-text{font-size: 11px; font-size: 1.1rem; color: #666;}
@@ -82,71 +161,8 @@ body{background: #202020;}
 .input_width_sm {width: 25% !important; min-width: 145px !important;}
 .input_width_xs {width: 100px !important;}
 
-.help_block{display: block; margin: 5px 0;}
-.help_text{font-size: 11px; font-size: 1.1rem; color:#757575;}
-
-.join_info .btn_primary{display: block; background: #1a73e8; color: #fff; font-weight: 400; border-radius: 5px; padding: 8px 20px;} 
-.join_info .btn_apply{display: block; border-radius: 0; background: #fff; border: 1px solid #e21d19; color: #e21d19;}
-.join_info .btn_apply:hover{background: #e21d19; border: 1px solid #e21d19; color: #fff;}
-.join_info .content_item.item_guide{text-align: center; margin-top: 40px;}
-.join_info .item_guide .guide_info{border-top:  1px solid #ddd; padding: 40px 0 20px 0;}
-.join_info .item_guide .guide_list{font-size: 11px; font-size: 1.1rem;  padding-top: 15px;}
-.join_info .item_guide .guide_info p, .join_info .item_guide .guide_list .list_title, .join_info .item_guide .guide_list .list_item{color: #888;}
-
-
-/* 
-    * 2023-05-23 Style Update
-    * 클립다운 PC 리뉴얼과 캐시메이트 신규 서비스 공통 webview 팝업UI 스타일 작업
-    * 기존 클립다운 PLUS+ 팝업UI들도 업데이트 
-
-*/
-
-
-.font_num{font-family: 'Poppins', Malgun Gothic, sans-serif; font-weight: 500;}
-
-/* Button Style */
-.webview_box .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
-.webview_box .btn_default{background: #fff; border: 1px solid #333; color: #333;}
-.webview_box .btn_default:hover{background: #333; border: 1px solid #333; color: #fff;}
-.webview_box .btn_point{background: #e21d19; border: 1px solid #e21d19; color: #fff;}
-.webview_box .btn_point:hover{background: #d22619; border: 1px solid #d22619; color: #fff;}
-.webview_box .btn_outline_point{background: #fff; border: 1px solid #e21d19; color: #e21d19;}
-.webview_box .btn_full_gray{background: #a7a7a7; border: 1px solid #a7a7a7; color: #fff;}
-.webview_box .btn_block{display: block; width: 100%;}
-.webview_box .btn_md{font-size: 13px; font-size: 1.3rem; line-height: 1.3; padding: 6px 20px;}
-.webview_box .btn_lg{font-size: 15px; font-size: 1.5rem; padding: 8px 20px;}
-.webview_box .btn_action{text-align: center; margin: 0; border-top: 1px solid #ddd; padding: 20px 0; margin-top: 20px;}
-.webview_box .btn_action .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
-.webview_box .btn_area{margin: 20px 0 10px;}
-.webview_box .guide_text{font-size: 11px; font-size: 1.1rem; color: #666; padding-top: 5px;}
-.webview_box .guide_text .text_link{color: #333; font-size: 11px; font-size: 1.1rem; font-weight: 600; cursor: pointer; text-decoration: underline;}
-.webview_box .error_text{color:#e21d19;}
-
-.btn_checkbox_agree{}
-.btn_checkbox_agree input[type="checkbox"]{display: none;}
-.btn_checkbox_agree input[type="checkbox"] + label{cursor: pointer;}
-.btn_checkbox_agree .bnt_checkbox{display: block; background: #eb524e; border: 1px solid #eb524e; color: #fff; font-size: 15px; font-size: 1.5rem; font-weight: 600; border-radius: 30px; padding: 8px 20px; margin: 0;}
-.btn_checkbox_agree .bnt_checkbox:hover{background: #e21d19; border: 1px solid #e21d19;}
 
 
 
 
-/* webview 팝업 로그인 안내 스타일 */
-.login_info input::placeholder{font-size:12px; font-size:1.2rem; font-weight: 400; color:#aaa;}
-.login_info .join_link{border-top: 1px solid #eee; padding: 10px 0 0px;}
-.login_info .content_box .content_item.form_auth{margin:10px 0;}
-.login_info .content_box .content_item.form_auth .btn_area{margin: 15px 0 10px;}
-.login_info .guide_text{font-size:10px; font-size:1rem; letter-spacing: -1px;}
-.login_info .guide_text .text_link{font-size:10px; font-size:1rem;}
-/* webview 팝업 회원가입 안내 스타일 */
-.join_info{min-height: 320px;}
-.join_info .form_join{border: 0;}
-.join_info .form_join .terms_agree_list{margin: 30px 0;}
-.join_info .form_join .list_scroll{height: 100px; overflow-y: scroll; border: 1px solid #eee;}
-.join_info .form_join .list_scroll li{padding: 2px 10px;}
-.join_info .form_auth .form_group{margin-bottom: 10px;}
-.join_info .form_auth .text_link{font-size:11px; font-size:1.1rem; color: #1a73e8;}
 
-.btn_wv_info{font-family: 'Roboto', sans-serif; color:#757575; font-size: 14px; font-size: 1.4rem; font-weight: 500; text-align: center;}
-.btn_login_google{font-family: 'Roboto', sans-serif; width: 100%; background: #fff url("../images/icon_login_google.png") no-repeat 2rem 50%; background-size: 18px auto; padding: 10px 10px 10px 40px; border-top: 1px solid #f7f7f7; border-radius: 30px; -webkit-box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%); box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%);}
-.btn_login_google:hover{background-color: #eee;}
