--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -47,31 +47,36 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_intro{}
 .section_intro .content_item{display: flex; flex-direction: row; width: 100%; padding: 60px 0;}
 .section_intro .intro_des{}
-.section_intro .intro_des .content_title{font-size: 38px; font-size: 3.8rem; letter-spacing: -1px; font-weight: 600; padding-bottom: 10px;}
-.section_intro .intro_des .text_des{font-size: 28px; font-size: 2.8rem; line-height: 1.6; padding: 20px 0;}
-.section_intro .item_img{position: relative; max-width: 500px;}
+.section_intro .intro_des .content_title{font-size: 34px; font-size: 3.4rem; letter-spacing: -1px; font-weight: 600; padding-bottom: 10px;}
+.section_intro .intro_des .text_des{font-size: 24px; font-size: 2.4rem; line-height: 1.6; padding: 20px 0;}
+.section_intro .item_img{position: relative; max-width: 480px;}
 .section_intro .content_item.item_02{flex-direction: row-reverse;}
 .section_intro .content_item.item_02 .content_left{align-items:center;}
 
 .section_guide{background: #f5f5f5;}
 .section_guide .content_guide{display: grid; gap: 2rem; --auto-grid-min-size: 20em; grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));}
 .section_guide .content_guide .content_box{background: #fff; border-radius: 1.5rem; text-align: center; padding: 2rem;}
-.content_guide .content_box .item_img{}
+.content_guide .content_box .item_img{position: relative; max-width: 100%; margin: 0 auto;}
 .content_guide .content_box .text_des{position: relative; padding: 10px 0; padding-bottom: 20px;}
 .content_guide .content_box .text_des span{font-size: 18px; font-size: 1.8rem; font-weight: 600;}
 .content_guide .content_box .btn_guide{display: inline-block; background: #01875f; color: #fff; border-radius: 5px; padding: 12px 12px 10px 12px;}
 .content_guide .content_box .btn_guide:hover{text-decoration: none;}
+.content_guide .content_box .btn_guide span{font-size: 16px; font-size: 1.6rem; font-weight: 500;}
 
 .section_faq{} 
 .accordion-list-box{width: 100%; padding-top: 20px; padding-bottom: 20px;}
 .accordion-list-box .acc-item{position: relative;}
-.acc-item .acc-head{display: block; position: relative; background: #fff; border-bottom: 1px solid #eee; padding: 40px 20px 10px;}
-.acc-item .acc-head .heade-title{color: #e21d19; font-size: 18px; font-size: 1.8rem; font-weight: 400; margin: 0;}
-.acc-item .acc-contents{display: block; position: relative; width: 100%; height: auto; background: #fff; font-size: 16px; font-size: 1.6rem; font-weight:400; padding: 10px 60px 20px; margin-top: -1px; z-index: 99;}
+.acc-item .acc-head{display: block; position: relative; background: #fff; border-bottom: 1px solid #f5f5f5; padding: 40px 28px 10px 0; cursor: pointer;}
+.acc-item .acc-head .head-title{color: #e21d19; font-size: 18px; font-size: 1.8rem; font-weight: 400; margin: 0;}
+.acc-item .acc-head .head-title:after{content: " "; position: absolute; width: 10px; height: 10px; right: 10px; border-right: 2px solid #eee; border-bottom: 2px solid #eee; margin-top: 10px; transform: rotate(45deg); transition: all .2s ease-in-out;}
+.acc-item .acc-head.active .head-title:after{border-color:#e21d19; transform: rotate(-135deg); margin-top: 7px;}
+.acc-item .acc-contents{display: block; position: relative; width: 100%; height: auto; background: #fff; font-size: 16px; font-size: 1.6rem; font-weight:400; padding: 10px 40px 20px; margin-top: -1px; border-bottom: 1px solid #f5f5f5; z-index: 99;}
 .acc-item .style_q{font-weight: 800; letter-spacing: -1px; padding-right: 10px; vertical-align: middle;}
 .acc-item .style_aw p{font-size: 16px; font-size: 1.6rem; line-height: 1.4; padding-bottom: 5px;}
 .acc-item .style_aw p:last-child{padding-bottom: 0;}
 .acc-item .style_aw .aw_list{list-style-type: decimal; line-height: 1.6; padding: 10px 0; padding-left: 17px;}
+
+
 
 @media screen and (max-width: 900px) {
     
@@ -79,10 +84,12 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_main .item_logo{max-width: 220px;}
     .section_main .head-title .tit_lg{font-size: 40px; font-size: 4rem;}
     .section_main .intro_des .item_tag{font-size: 13px; font-size: 1.3rem;}
+    .section_main .img_main_visual{min-width: 550px; width: 100%; top:0}
     .section_main .btn_banner{max-width: 180px;}
-    .section_intro .intro_des .content_title{font-size: 32px; font-size: 3.2rem;}
-    .section_intro .intro_des .text_des{font-size: 20px; font-size: 2.0rem;}
-    .section_intro .intro_des .text-lg{font-size: 20px; font-size: 2.0rem; letter-spacing: -1px;}
+    .section_intro .intro_des .content_title{font-size: 28px; font-size: 2.8rem;}
+    .section_intro .intro_des .text_des{font-size: 18px; font-size: 1.8rem;}
+    .section_intro .item_img{max-width: 400px;}
+    .content_guide .content_box .item_img{max-width: 300px;}
     .section_faq{margin: 30px 0; padding: 30px 0;} 
 
 }
@@ -94,34 +101,38 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .wrap_cashmate .section_main .contents{flex-direction: column-reverse; height: 100%;}
     .wrap_cashmate .section_main .content_left{width: 100%; align-items: center; padding-right: 0; padding: 10px 0 40px;}
     .wrap_cashmate .section_main .content_right{width: 100%; align-items: center; padding: 20px 0 10px 0;}
-    .section_main .img_main_visual{position: relative; width: 100%; min-width: 300px; top: 0;}
+    .section_main .img_main_visual{max-width: 400px; top: 0;}
     .head-title h1{font-size: 24px; font-size: 2.4rem;}
     .section_main .item_logo{max-width: 220px;}
     .section_main .head-title{text-align: center;}
-    .section_main .head-title h1{font-size: 28px; font-size: 2.8rem;}
-    .section_main .head-title .tit_lg{font-size: 32px; font-size: 3.2rem;}
+    .section_main .head-title h1{font-size: 30px; font-size: 3.0rem;}
     .section_main .intro_des{padding: 0 0 10px 0;}
     .section_main .intro_des .item_tag{margin: 0 5px; padding: 0;}
     .section_main .btn_banner{max-width: 200px;}
     .section_intro .content_item, .section_intro .content_item.item_02{flex-direction: column-reverse; padding: 30px 0;}
     .section_intro .intro_des{text-align: center;}
+    .section_intro .intro_des .content_title{font-size: 24px; font-size: 2.4rem;}
     .section_guide{padding-bottom: 60px;}
     .content_guide .content_box .btn_guide span{font-size: 16px; font-size: 1.6rem;}
     .section_faq .head-title{padding: 20px 0;}
-    .acc-item .acc-head .heade-title{font-size: 16px; font-size: 1.6rem;}
+    .acc-item .acc-head .head-title{font-size: 16px; font-size: 1.6rem;}
     .acc-item .style_aw p{font-size: 14px; font-size: 1.4rem;}
     .acc-item .acc-contents{padding: 10px 10px 20px 10px}
-    .acc-item .acc-head{padding: 20px 10px 10px;}
+    .acc-item .acc-head{padding: 20px 28px 10px 0;}
 }
 @media screen and (max-width: 360px) {
-    
+    .mb-20{margin-bottom: 10px !important;}
+    .section_main .img_main_visual{min-width: 400px;}
     .section_main .intro_des .item_tag{font-size: 11px; font-size: 1.1rem;}
-    .section_intro .intro_des .content_title{font-size: 24px; font-size: 2.4rem;}
-    .section_intro .intro_des .text_des{font-size: 16px; font-size: 1.6rem; padding: 10px 0;}
-    .section_intro .intro_des .text-lg{font-size: 16px; font-size: 1.6rem; letter-spacing: -1px;}
+    .section_intro .content_item, .section_intro .content_item.item_02{padding: 20px 0;}
+    .section_intro .intro_des .content_title{font-size: 19px; font-size: 1.9rem;}
+    .section_intro .intro_des .text_des{font-size: 15px; font-size: 1.5rem; padding: 10px 0;}
+    .section_intro .item_img{max-width: 300px;}
+    .content_guide .content_box .item_img{max-width: 250px}
+    .content_guide .content_box .text_des span{font-size: 16px; font-size: 1.6rem; }
     .accordion-list-box{padding-top: 10px; padding-bottom: 10px;}
-    .acc-item .acc-head{padding: 10px 10px 10px;}
-    .acc-item .acc-head .heade-title{font-size: 14px; font-size: 1.4rem;}
+    .acc-item .acc-head{padding: 10px 28px 10px 0;}
+    .acc-item .acc-head .head-title{font-size: 14px; font-size: 1.4rem;}
     .acc-item .acc-contents{padding: 5px 10px 10px;}
     .acc-item .style_aw p, .acc-item .style_aw .aw_list li{font-size: 13px; font-size: 1.3rem;}
 }
