--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -46,9 +46,10 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 .section_intro{}
 .section_intro .content_item{display: flex; flex-direction: row; width: 100%; padding: 60px 0;}
-.section_intro .intro_des{}
-.section_intro .intro_des .content_title{font-size: 34px; font-size: 3.4rem; letter-spacing: -1px; font-weight: 600; padding-bottom: 10px;}
-.section_intro .intro_des .text_des{font-size: 24px; font-size: 2.4rem; line-height: 1.6; padding: 20px 0;}
+.section_intro .intro_des_w{display: block;}
+.section_intro .intro_des_m{display: none;}
+.section_intro .intro_des .content_title, .section_intro .intro_des_w .content_title{font-size: 34px; font-size: 3.4rem; letter-spacing: -1px; font-weight: 600; padding-bottom: 10px;}
+.section_intro .intro_des .text_des, .section_intro .intro_des_w .text_des{font-size: 24px; font-size: 2.4rem; line-height: 1.6; padding: 20px 0;}
 .section_intro .item_img{position: relative; max-width: 480px;}
 .section_intro .content_item.item_02{flex-direction: row-reverse;}
 .section_intro .content_item.item_02 .content_left{align-items:center;}
@@ -107,12 +108,14 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_main .head-title{text-align: center;}
     .section_main .head-title h1{font-size: 30px; font-size: 3.0rem;}
     .section_main .head-title .tit_lg{font-size: 34px; font-size: 3.4rem;}
-    .section_main .intro_des{padding: 0 0 10px 0;}
+    .section_main .intro_des{display: block; padding: 0 0 10px 0;}    
     .section_main .intro_des .item_tag{background: transparent; margin: 0 5px; padding: 0;}
     .section_main .btn_banner{max-width: 200px;}
     .section_intro .content_item, .section_intro .content_item.item_02{flex-direction: column-reverse; padding: 30px 0;}
-    .section_intro .intro_des{text-align: center;}
-    .section_intro .intro_des .content_title{font-size: 24px; font-size: 2.4rem;}
+    .section_intro .intro_des_w{display: none;}
+    .section_intro .intro_des_m{display: block;}
+    .section_intro .intro_des, .intro_des_m{text-align: center;}
+    .section_intro .intro_des .content_title, .intro_des_m .content_title{font-size: 24px; font-size: 2.4rem;}
     .section_guide{padding-bottom: 60px;}
     .content_guide .content_box .btn_guide span{font-size: 16px; font-size: 1.6rem;}
     .section_faq .head-title{padding: 20px 0;}
@@ -128,8 +131,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_main .head-title .tit_lg{font-size: 26px; font-size: 2.6rem;}
     .section_main .intro_des .item_tag{font-size: 11px; font-size: 1.1rem;}
     .section_intro .content_item, .section_intro .content_item.item_02{padding: 20px 0;}
-    .section_intro .intro_des .content_title{font-size: 19px; font-size: 1.9rem;}
-    .section_intro .intro_des .text_des{font-size: 15px; font-size: 1.5rem; padding: 10px 0;}
+    .section_intro .intro_des .content_title, .intro_des_m .content_title{font-size: 19px; font-size: 1.9rem;}
+    .section_intro .intro_des .text_des, .intro_des_m .text_des{font-size: 15px; font-size: 1.5rem; padding: 10px 0;}
     .section_intro .item_img{max-width: 300px;}
     .content_guide .content_box .item_img{max-width: 250px}
     .content_guide .content_box .text_des span{font-size: 16px; font-size: 1.6rem; }
